--- a/po/R-ja.po
+++ b/po/R-ja.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: jaspMetaAnalysis 0.13.0\n"
-"POT-Creation-Date: 2021-01-05 09:39\n"
+"POT-Creation-Date: 2021-03-06 14:59\n"
 "PO-Revision-Date: 2021-02-21 04:50+0000\n"
 "Last-Translator: Koji Kosugi <kosugitti@gmail.com>\n"
 "Language-Team: Japanese <https://hosted.weblate.org/projects/jasp/"
@@ -34,7 +34,11 @@ msgstr ""
 msgid "You cannot set all the prior model probabilties to zero."
 msgstr ""
 
-msgid "The model could not be fit. Please check the following: Do you have at least n=2 studies? If the prior is truncated, is it consistent with the data (when most effect sizes are negative, the analysis may not work when the prior is constrained to be postive)?"
+msgid ""
+"The model could not be fit. Please check the following: Do you have at least "
+"n=2 studies? If the prior is truncated, is it consistent with the data (when "
+"most effect sizes are negative, the analysis may not work when the prior is "
+"constrained to be postive)?"
 msgstr ""
 
 msgid "Posterior Estimates per Model"
@@ -73,7 +77,9 @@ msgstr ""
 msgid "Ordered effects"
 msgstr ""
 
-msgid "%s and %s are the group-level effect size and standard deviation, respectively."
+msgid ""
+"%s and %s are the group-level effect size and standard deviation, "
+"respectively."
 msgstr ""
 
 msgid "%s is the group-level effect size."
@@ -82,31 +88,54 @@ msgstr ""
 msgid "Bayes factor of the random effects H%1$s over the fixed effects H%1$s."
 msgstr ""
 
-msgid "Posterior estimates are based on the models that assume an effect to be present. The Bayes factor is based on all four models: fixed effects H%2$s & random effects H%2$s over the fixed effects H%1$s & random effects H%1$s."
+msgid ""
+"Posterior estimates are based on the models that assume an effect to be "
+"present. The Bayes factor is based on all four models: fixed effects H%2$s & "
+"random effects H%2$s over the fixed effects H%1$s & random effects H%1$s."
 msgstr ""
 
-msgid "Model averaged posterior estimates for %3$s are not yet available, but will be added in the future. The Bayes factor is based on all four models: random effects H%1$s & H%2$s over the fixed effects H%1$s & H%2$s."
+msgid ""
+"Model averaged posterior estimates for %3$s are not yet available, but will "
+"be added in the future. The Bayes factor is based on all four models: random "
+"effects H%1$s & H%2$s over the fixed effects H%1$s & H%2$s."
 msgstr ""
 
-msgid "Bayes factor of the (unconstrained/constrained) random effects H%1$s over the fixed effects H%1$s."
+msgid ""
+"Bayes factor of the (unconstrained/constrained) random effects H%1$s over "
+"the fixed effects H%1$s."
 msgstr ""
 
 msgid "Bayes factor of the fixed effects H%1$s over the random effects H%1$s."
 msgstr ""
 
-msgid "Model averaged posterior estimates are based on the models that assume an effect to be present. The Bayes factor is based on all four models: fixed effects H%1$s & random effects H%1$s over the fixed effects H%2$s & random effects H%2$s."
+msgid ""
+"Model averaged posterior estimates are based on the models that assume an "
+"effect to be present. The Bayes factor is based on all four models: fixed "
+"effects H%1$s & random effects H%1$s over the fixed effects H%2$s & random "
+"effects H%2$s."
 msgstr ""
 
-msgid "Model averaged posterior estimates for %3$s are not yet available, but will be added in the future. The Bayes factor is based on all four models: fixed effects H%1$s & H%2$s over the random effects H%1$s & H%2$s."
+msgid ""
+"Model averaged posterior estimates for %3$s are not yet available, but will "
+"be added in the future. The Bayes factor is based on all four models: fixed "
+"effects H%1$s & H%2$s over the random effects H%1$s & H%2$s."
 msgstr ""
 
-msgid "Bayes factor of the fixed effects H%1$s over the (unconstrained/constrained) random effects H%1$s."
+msgid ""
+"Bayes factor of the fixed effects H%1$s over the (unconstrained/constrained) "
+"random effects H%1$s."
 msgstr ""
 
-msgid "Bayes factor of the ordered effects H%1$s over the fixed effects H%1$s. The Bayes factor for the ordered effects H%1$s versus the unconstrained (random) effects H%1$s model is %2$.3f."
+msgid ""
+"Bayes factor of the ordered effects H%1$s over the fixed effects H%1$s. The "
+"Bayes factor for the ordered effects H%1$s versus the unconstrained (random) "
+"effects H%1$s model is %2$.3f."
 msgstr ""
 
-msgid "Bayes factor of the fixed effects H%1$s over the ordered effects H%1$s. The Bayes factor for the unconstrained (random) effects H%1$s versus the ordered effects H%1$s model is %2$.3f."
+msgid ""
+"Bayes factor of the fixed effects H%1$s over the ordered effects H%1$s. The "
+"Bayes factor for the unconstrained (random) effects H%1$s versus the ordered "
+"effects H%1$s model is %2$.3f."
 msgstr ""
 
 msgid "Model Probabilities"
@@ -139,10 +168,14 @@ msgstr ""
 msgid "Study"
 msgstr ""
 
-msgid "Posterior mean and 95%% credible interval estimates from the random effects model."
+msgid ""
+"Posterior mean and 95%% credible interval estimates from the random effects "
+"model."
 msgstr ""
 
-msgid "Posterior mean and 95%% credible interval estimates from the constrained random effects model."
+msgid ""
+"Posterior mean and 95%% credible interval estimates from the constrained "
+"random effects model."
 msgstr ""
 
 msgid "Effect Size"
@@ -217,7 +250,9 @@ msgstr ""
 msgid "Studies"
 msgstr ""
 
-msgid "Posterior model \n probability"
+msgid ""
+"Posterior model \n"
+" probability"
 msgstr ""
 
 msgid "The metafor package crashed with the following error: %s"
@@ -403,7 +438,9 @@ msgstr ""
 msgid "Function not applicable to objects of class \"rma.ls\"."
 msgstr ""
 
-msgid "Setting 'xlim' and 'zlim' automatically not possible (must set axis limits manually)."
+msgid ""
+"Setting 'xlim' and 'zlim' automatically not possible (must set axis limits "
+"manually)."
 msgstr ""
 
 msgid "Radial Plot"
@@ -466,7 +503,9 @@ msgstr ""
 msgid "%g%% Confidence Interval"
 msgstr ""
 
-msgid "Currently this only works with rma and rma.mv objects that have specified 'yi' as a formula."
+msgid ""
+"Currently this only works with rma and rma.mv objects that have specified "
+"'yi' as a formula."
 msgstr ""
 
 msgid "Formula is refering to factors that are not in the model."
@@ -550,6 +589,11 @@ msgstr ""
 msgid "Heterogeneity (%s)"
 msgstr ""
 
+msgid ""
+"The study labels contain invalid characters. Please, remove them before "
+"running the analysis."
+msgstr ""
+
 msgid "Prior Plots"
 msgstr ""
 
@@ -568,7 +612,9 @@ msgstr ""
 msgid "Model Preview"
 msgstr ""
 
-msgid "At least one prior distribution per parameter must be specified (either null or alternative)."
+msgid ""
+"Please specify a prior distribution for each parameter in the Models "
+"specification section (either null or alternative)."
 msgstr ""
 
 msgid "Model Summary"
@@ -583,7 +629,9 @@ msgstr ""
 msgid "Publication bias"
 msgstr ""
 
-msgid "The analysis will estimate multiple meta-analytic models using MCMC and might require a prolonged time to complete."
+msgid ""
+"The analysis will estimate multiple meta-analytic models using MCMC and "
+"might require a prolonged time to complete."
 msgstr ""
 
 msgid "Models Overview"
@@ -616,7 +664,9 @@ msgstr ""
 msgid "P(M|data)"
 msgstr ""
 
-msgid "All models failed to converge. Please, consider inspecting the 'MCMC diagnostics' and changing the 'Advanced options'."
+msgid ""
+"All models failed to converge. Please, consider inspecting the 'MCMC "
+"diagnostics' and changing the 'Advanced options'."
 msgstr ""
 
 msgid "Warning:"
@@ -625,7 +675,9 @@ msgstr ""
 msgid "%i models failed to converge."
 msgstr ""
 
-msgid "Analyzing odds ratios is an experimental feature. The performance of default prior distributions was not evaluated."
+msgid ""
+"Analyzing odds ratios is an experimental feature. The performance of default "
+"prior distributions was not evaluated."
 msgstr ""
 
 msgid "Model Averaged Estimates"
@@ -640,19 +692,25 @@ msgstr ""
 msgid "Conditional Estimates"
 msgstr ""
 
-msgid "Estimates are model averaged over models assuming existence of effect / heterogeneity."
+msgid ""
+"Estimates are model averaged over models assuming existence of effect / "
+"heterogeneity."
 msgstr ""
 
 msgid "Conditional Weights (%s)"
 msgstr ""
 
-msgid "Estimated weights (%s) are model averaged over models assuming existence of publication bias."
+msgid ""
+"Estimated weights (%s) are model averaged over models assuming existence of "
+"publication bias."
 msgstr ""
 
 msgid "Conditional Estimated Studies' Effects (%s)"
 msgstr ""
 
-msgid "Estimated studies effects (%s) are model averaged over models assuming existence of effect."
+msgid ""
+"Estimated studies effects (%s) are model averaged over models assuming "
+"existence of effect."
 msgstr ""
 
 msgid "BF%s"
@@ -806,13 +864,16 @@ msgstr ""
 msgid "Frequency"
 msgstr "頻度"
 
-msgid "There were no p-value cutoffs after their automatic reduction. The displayed frequencies correspond to the non-reduced p-value cutoffs."
+msgid ""
+"There were no p-value cutoffs after their automatic reduction. The displayed "
+"frequencies correspond to the non-reduced p-value cutoffs."
 msgstr ""
 
 msgid "Weight Function(%s)"
 msgstr ""
 
-msgid "The figure could not be created since one of the estimates is not a number."
+msgid ""
+"The figure could not be created since one of the estimates is not a number."
 msgstr ""
 
 msgid "P-value (One-sided)"
@@ -839,22 +900,36 @@ msgstr ""
 msgid "Random effects model:"
 msgstr ""
 
-msgid "%sThe optimizer failed to find a solution. Consider re-specifying the model or the p-value cutoffs."
+msgid ""
+"%sThe optimizer failed to find a solution. Consider re-specifying the model "
+"or the p-value cutoffs."
 msgstr ""
 
-msgid "%sThe automatic cutoffs selection did not find viable p-value cutoffs. Please, specify them manually."
+msgid ""
+"%sThe automatic cutoffs selection did not find viable p-value cutoffs. "
+"Please, specify them manually."
 msgstr ""
 
-msgid "At least one of the p-value intervals contains no effect sizes, leading to estimation problems. Consider re-specifying the cutoffs."
+msgid ""
+"At least one of the p-value intervals contains no effect sizes, leading to "
+"estimation problems. Consider re-specifying the cutoffs."
 msgstr ""
 
-msgid "At least one of the p-value intervals contains three or fewer effect sizes, which may lead to estimation problems. Consider re-specifying the cutoffs."
+msgid ""
+"At least one of the p-value intervals contains three or fewer effect sizes, "
+"which may lead to estimation problems. Consider re-specifying the cutoffs."
 msgstr ""
 
-msgid "The unadjusted estimate is negative. The selection model default specification expects that the expected direction of the effect size is positive. Please, check that you specified the effect sizes correctly or change the 'Expected effect size direction' option in the 'Model' tab."
+msgid ""
+"The unadjusted estimate is negative. The selection model default "
+"specification expects that the expected direction of the effect size is "
+"positive. Please, check that you specified the effect sizes correctly or "
+"change the 'Expected effect size direction' option in the 'Model' tab."
 msgstr ""
 
-msgid "The analysis requires both 'Effect Size' and 'Effect Size Standard Error' to be specified."
+msgid ""
+"The analysis requires both 'Effect Size' and 'Effect Size Standard Error' to "
+"be specified."
 msgstr ""
 
 msgid "Only the following one-sided p-value cutoffs were used: %s."
