--- a/po/R-nl.po
+++ b/po/R-nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: R 3.6.1\n"
 "Report-Msgid-Bugs-To: github.com/jasp-stats/jasp-issues/issues\n"
-"POT-Creation-Date: 2021-01-05 09:39\n"
+"POT-Creation-Date: 2021-03-06 14:59\n"
 "PO-Revision-Date: 2020-12-02 21:29+0000\n"
 "Last-Translator: JASP Stats <F.A.M.Meerhoff@uva.nl>\n"
 "Language-Team: Dutch <https://hosted.weblate.org/projects/jasp/jasp-engine/"
@@ -639,6 +639,11 @@ msgstr "Effectgrootte (%s)"
 msgid "Heterogeneity (%s)"
 msgstr "Heterogeniteit (%s)"
 
+msgid ""
+"The study labels contain invalid characters. Please, remove them before "
+"running the analysis."
+msgstr ""
+
 msgid "Prior Plots"
 msgstr "Prior Grafieken"
 
@@ -657,9 +662,10 @@ msgstr "Alternatief"
 msgid "Model Preview"
 msgstr "Model Voorvertoning"
 
+#, fuzzy
 msgid ""
-"At least one prior distribution per parameter must be specified (either null "
-"or alternative)."
+"Please specify a prior distribution for each parameter in the Models "
+"specification section (either null or alternative)."
 msgstr ""
 "Er moet tenminste één prior verdeling gespecificeerd zijn per parameter (in "
 "het null of alternatief model)."
